[gd_scene load_steps=4 format=3 uid="uid://cqmpg83psbm2w"]

[ext_resource type="Script" path="res://Characters/Spider/placed_web.gd" id="1_1eo1l"]
[ext_resource type="Texture2D" uid="uid://dr4dfwqhhwed3" path="res://Characters/Spider/PlacedWeb.png" id="1_mcqhw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_amcdr"]
radius = 7.0
height = 20.0

[node name="PlacedWeb" type="Area2D"]
script = ExtResource("1_1eo1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_amcdr")

[node name="PlacedWeb" type="Sprite2D" parent="."]
texture = ExtResource("1_mcqhw")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="setOwner" from="." to="." method="_on_set_owner"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
